[project]
name = "mcp-fetch-url"
version = "0.0.1"
description = "Fetch URL"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bs4>=0.0.2",
    "chardet>=5.2.0",
    "mcp[cli]>=1.13.1",
    "pydantic>=2.11.7",
    "requests>=2.32.5",
]

[project.scripts]
mcp-fetch-url = "mcp_fetch_url:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_fetch_url"]
